--- a/src/routes/game/components/playerBoardGrid/PlayerBoardGrid.module.css
+++ b/src/routes/game/components/playerBoardGrid/PlayerBoardGrid.module.css
@@ -60,14 +60,16 @@
     max-height: 100vh;
   }
   .playerBoard {
-    transform: scale(0.95);
-    transform-origin: top left;
-    grid-template-rows: var(--card-size) var(--card-size) var(--card-size);
+    grid-template-rows:
+      calc(var(--card-size) * 0.95) calc(var(--card-size) * 0.95)
+      calc(var(--card-size) * 0.95);
     grid-template-columns:
-      var(--card-size) var(--card-size) 1fr var(--card-size)
-      var(--card-size) var(--card-size) 1fr var(--card-size) var(--card-size);
-    gap: 1dvw;
-    padding: 1dvw;
+      calc(var(--card-size) * 0.95) calc(var(--card-size) * 0.95) 1fr
+      calc(var(--card-size) * 0.95) calc(var(--card-size) * 0.95)
+      calc(var(--card-size) * 0.95) 1fr calc(var(--card-size) * 0.95)
+      calc(var(--card-size) * 0.95);
+    gap: calc(1dvw * 0.95);
+    padding: calc(1dvw * 0.95);
     grid-template-areas:
       'head permanents permanents permanents permanents permanents permanents permanents graveyard'
       'chest arms . weaponl hero weaponr . pitch deck'
